# bcm-hid-proxy

./: LICENSE  README.md  pyproject.toml  setup.cfg
bcm_hid_proxy/: bcm_hid_proxy.py
systemd/: bcm-hid-proxy.service  bcm-hid-proxy.timer
