[metadata]
name = bcm-hid-proxy
version = 0.1
keywords = bluetooth hid proxy bcm2046
description = A tool to control the HID Proxy configuration of Broadcom BCM2046 Bluetooth controllers
long_description_content_type = text/markdown
author = Philip Langdale
author_email = philipl@overt.org
license = MIT
url = https://github.com/philipl/bcm-hid-proxy
python_requires='~=3.11'

[options]
packages = find:
include_package_data = true
install_requires =
    pybluez >= 0.23
    crccheck >= 1.0

[options.entry_points]
console_scripts =
    bcm-hid-proxy = bcm_hid_proxy.bcm_hid_proxy:main


[flake8]
ignore = H301, W503, W504
max-line-length = 90
import-order-style = google
